app/assets/styles/modules/_wrapper.css
.wrapper {
	padding-left: 18px;
	padding-right: 18px;
	max-width: 1171px;
	margin-left: auto;
	margin-right: auto;

	&--medium {
		max-width: 976px;
	}

	&--narrow {
		max-width: 460px;
	}

	&--no-padding-until-medium {
		padding-left: 0;
		padding-right: 0;

		@mixin mView {
			padding-left: 18px;
			padding-right: 18px;
		}
	}

	&--no-padding-until-large {
		padding-left: 0;
		padding-right: 0;

		@mixin lView {
			padding-left: 18px;
			padding-right: 18px;
		}
	}

	.wrapper {
		padding-left: 0;
		padding-right: 0;
	}
}

